# belirtec-embed

./: .gitignore  README.md  apply_perbucket_prompts.sh  pyproject.toml  requirements-lock.txt  requirements.txt  results_table.sh  run_matrix.sh
configs/: axes.yaml  corpora.yaml  generation.yaml  training.yaml
configs/experiments/: champion.yaml  fullft_allsynth_mnrl.yaml  fullft_multimodel_sizematch_mnrl.yaml  fullft_nolegal_mnrl.yaml  fullft_realonly_mnrl.yaml  fullft_singlemodel_mnrl.yaml  gemma_allsynth_gist.yaml  gemma_v2_gist.yaml  gist.yaml  gist_staged.yaml  legal_msmarco_gist.yaml  legal_msmarco_mnrl.yaml  lora_allsynth_gist.yaml  lora_allsynth_hard_mnrl.yaml  lora_allsynth_mnrl.yaml  lora_allsynth_msmarco_gist.yaml  lora_allsynth_nolegal_msmarco_gist.yaml  lora_allsynth_safe_mnrl.yaml  lora_r16_gist.yaml  lora_r64_gist.yaml  lora_r8_gist.yaml  lora_staged_safe2hard_mnrl.yaml  msmarco_gist.yaml  msmarco_mnrl.yaml  no_legal.yaml  qwen3_allsynth_gist.yaml  qwen3_v2_gist.yaml  smoke.yaml  smoke_msmarco.yaml  staged.yaml
scripts/: data.sh  eval.py  eval.sh  filter_legal.py  generate.py  mine.py  pull_and_eval.py  push.py  push_model.py  score.py  train.py  train.sh  train_and_eval.py
src/belirtec/: bucket.py  config.py  contamination.py  corpora.py  grounded.py  io.py  json_utils.py  llm.py  mine.py  orchestrate.py  prompts.py  push.py  score.py  synthetic.py  worker.py
src/belirtec/train/: data.py  evaluate.py  loop.py  loss.py  model.py  mteb_eval.py  (+1 more)
tests/: test_contamination.py  test_grounded.py  test_json.py  test_sharding.py  test_train_data.py
